# sq_grasp

./: CMakeLists.txt  README.md  package.xml
doc/html/: annotated.html  classLccpSegmentationAlgorithm-members.html  classLccpSegmentationAlgorithm.html  classSQFitter-members.html  classSQFitter.html  classSampling-members.html  classSampling.html  classSegmentation-members.html  classSegmentation.html  classSegmentationClient-members.html  classSegmentationClient.html  classSegmentationParameters-members.html  classSegmentationParameters.html  classSuperquadricFitting-members.html  classSuperquadricFitting.html  classes.html  classlccp__segmentation-members.html  classlccp__segmentation.html  dir_000001_000003.html  dir_000002_000003.html  dir_000005_000003.html  dir_000006_000003.html  dir_08946fb7f01e92820b9fd3a9f1d00ca1.html  dir_08946fb7f01e92820b9fd3a9f1d00ca1_dep.map  dir_08946fb7f01e92820b9fd3a9f1d00ca1_dep.md5  dir_625ab29602b5525dac2e5b1f91fc8bf4.html  dir_625ab29602b5525dac2e5b1f91fc8bf4_dep.map  dir_625ab29602b5525dac2e5b1f91fc8bf4_dep.md5  dir_82ccf1bfc7c4fd987539908695551548.html  dir_84a6be2bf69535691b9b955077166c10.html  dir_84a6be2bf69535691b9b955077166c10_dep.map  dir_84a6be2bf69535691b9b955077166c10_dep.md5  dir_b2032c44800d249cfd761dd40bd73f92.html  dir_b6d135155445cb3b96b66e67052db638.html  dir_e5ab1ee8ec88938abcc2a93868fe4ca4.html  files.html  fitting_8cpp.html  fitting_8cpp__incl.md5  fitting_8cpp_source.html  fitting_8h.html  (+149 more)
doc/html/msg/: sq.html  sqArray.html
doc/html/srv/: get_sq.html  get_sq_param.html  segment_object.html
include/sq_fitting/: segmentation.h  sq_fitter.h
include/sq_grasp/: segmentation.h
launch/: segmentation.launch  segmentation_server.launch  sq_fit.launch  static_transform_kinect.launch
sq_fitting/: CMakeLists.txt  README.md  README.md~  package.xml
sq_fitting/doc/: manifest.yaml
sq_fitting/doc/html/: annotated.html  classLccpSegmentationAlgorithm-members.html  classLccpSegmentationAlgorithm.html  classSQFitter-members.html  classSQFitter.html  classSampling-members.html  classSampling.html  classSegmentationClient-members.html  classSegmentationClient.html  classSegmentationParameters-members.html  classSegmentationParameters.html  classSuperquadricFitting-members.html  classSuperquadricFitting.html  classSuperquadricSampling-members.html  classSuperquadricSampling.html  classes.html  classlccp__segmentation-members.html  classlccp__segmentation.html  dir_000001_000003.html  dir_000002_000003.html  dir_000005_000003.html  dir_000006_000003.html  dir_08946fb7f01e92820b9fd3a9f1d00ca1.html  dir_08946fb7f01e92820b9fd3a9f1d00ca1_dep.map  dir_08946fb7f01e92820b9fd3a9f1d00ca1_dep.md5  dir_625ab29602b5525dac2e5b1f91fc8bf4.html  dir_625ab29602b5525dac2e5b1f91fc8bf4_dep.map  dir_625ab29602b5525dac2e5b1f91fc8bf4_dep.md5  dir_82ccf1bfc7c4fd987539908695551548.html  dir_82ccf1bfc7c4fd987539908695551548_dep.map  dir_82ccf1bfc7c4fd987539908695551548_dep.md5  dir_84a6be2bf69535691b9b955077166c10.html  dir_84a6be2bf69535691b9b955077166c10_dep.map  dir_84a6be2bf69535691b9b955077166c10_dep.md5  dir_b2032c44800d249cfd761dd40bd73f92.html  dir_b6d135155445cb3b96b66e67052db638.html  dir_e5ab1ee8ec88938abcc2a93868fe4ca4.html  dir_e5ab1ee8ec88938abcc2a93868fe4ca4_dep.map  dir_e5ab1ee8ec88938abcc2a93868fe4ca4_dep.md5  files.html  (+146 more)
sq_fitting/doc/html/msg/: sq.html  sqArray.html
sq_fitting/doc/html/srv/: get_sq.html  get_sq_param.html  segment_object.html
sq_fitting/include/sq_fitting/: fitting.h  sampling.h  segmentation.h  segmentationfloor.h  sq_fitter.h  utils.h
sq_fitting/launch/: sq_fit.launch  static_transform_kinect.launch
sq_fitting/msg/: sq.msg  sqArray.msg
sq_fitting/src/: sq_test_node.cpp
sq_fitting/src/nodes/: filter_cloud_node.cpp  pcd_viewer.cpp  segmentation_client_node.cpp  sq_fitter_node.cpp  test_tf.cpp
sq_fitting/src/sq_fitting/: fitting.cpp  fitting.cpp~  fitting_service.cpp  sampling.cpp  sampling.cpp~  segmentation.cpp  segmentationfloor.cpp  sq_fitter.cpp  sq_fitter.cpp.autosave  utils.cpp
sq_fitting/src/test/: get_sq_client.cpp  sampling_test_pcd.cpp  sampling_test_pcd.cpp~  sampling_test_pcd_big.cpp  sampling_test_pcd_st.cpp  sampling_test_ros.cpp  seg_and_fit_test_pcd.cpp  seg_and_fit_test_ros.cpp  segmentation_test_pcd.cpp  segmentation_test_ros.cpp  show_convex_hull.cpp
sq_fitting/srv/: get_sq.srv
sq_grasping/: CMakeLists.txt  README.md  package.xml
sq_grasping/include/sq_grasping/: create_grasps.h  sq_grasping.h
sq_grasping/launch/: sq_grasping.launch  sq_grasping.launch~
sq_grasping/msg/: grasp.msg  graspArr.msg
sq_grasping/src/nodes/: execute_grasps_node.cpp  sq_grasping_node.cpp
sq_grasping/src/sq_grasping/: create_grasps.cpp  sq_grasping.cpp
sq_grasping/src/test/: get_grasp_client.cpp  get_sq.cpp
sq_grasping/srv/: getGrasps.srv
sq_visualization/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
sq_visualization/src/: sq_poses_display.cpp  sq_poses_display.h
src/nodes/: get_depth2rgb_cloud.cpp  segmentation_client_node.cpp  segmentation_node.cpp  segmentation_server_node.cpp
src/sq_fitting/: fitting.cpp  sampling.cpp  segmentation.cpp  utils.cpp
src/sq_grasp/: segmentation.cpp
src/test/: get_sq_client.cpp  sampling_test_pcd.cpp  segmented_objects.pcd
src/tests/: segmentation_test.cpp
srv/: get_sq.srv  get_sq_param.srv  segment_object.srv
